--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           conda env create -f environment.yml
+          conda init bash
+          source ~/.bashrc
           conda activate blockrand_q_designer
 
       - name: Build the package
