--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -3,6 +3,7 @@ name: Publish to conda-forge
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   build-and-publish:
@@ -20,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          conda env create -f environment.yml
+          CONDA_NO_PLUGINS=true conda env create -f environment.yml
           conda init bash
           source ~/.bashrc
           conda activate blockrand_q_designer
