--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -14,5 +14,5 @@ jobs:
       uses: fcakyon/conda-publish-action@v1.3
       with:
         subdir: 'conda'
-        anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
+        anacondatoken: ${{ secrets.ANACONDA_API_TOKEN }}
         platforms: 'win osx linux'
